# yabr

./: .gitignore  .pnp.cjs  CHANGELOG.md  LICENSE  README.md  biome.json  dev-app-update.yml  electron-builder.json  electron-builder.yml  eslintrc.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  skills-lock.json  tailwind.config.js  tsconfig.e2e.json  vite.config.ts
.github/workflows/: ci.yml  preview.yml  publish.yml  release.yml
.opencode/agents/: builder.md  reviewer.md
docs/: architecture-pr-plan.md  gpu-oom-fallback-plan.md  plan.md  production-readiness.md  ui-shell-redesign.md  user-visible-errors-plan.md  workflow.md
e2e/: global.d.ts  playwright.spec.ts  tauri-webdriver.config.ts
e2e/mocks/: mockState.ts  tauri-core.ts  tauri-event.ts  tauri-plugin-dialog.ts  tauri-plugin-fs.ts  tauri-plugin-opener.ts  tauri-window.ts
electron/main/: index.ts  update.ts
electron/preload/: index.ts
src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: batch.rs  commands.rs  config.rs  download.rs  error.rs  events.rs  gpu.rs  image_io.rs  inference.rs  job.rs  lib.rs  main.rs  models.rs  pipeline.rs  processing.rs
src-tauri/tests/: smoke_inference.rs
src/assets/icons/titlebar/: README.md
src/components/: AboutPanel.tsx  AppNotice.tsx  BatchList.tsx  DownloadModal.tsx  ExternalLinkButton.tsx  FileBlock.tsx  FileDropZone.tsx  ImagePanel.tsx  InlineSvg.tsx  ModeSelector.tsx  NcLicenseModal.tsx  PreviewCanvas.tsx  ProgressBar.tsx  SettingsPanel.tsx  TitleBar.tsx
src/components/DebugMenu/: index.tsx
src/components/Header/: index.tsx
src/components/ImageSlider/: index.tsx
src/components/Options/: index.tsx
src/components/Sidebar/: index.tsx
src/components/Steps/: index.tsx
src/components/update/: index.tsx
src/components/update/Modal/: index.tsx  modal.css
src/context/: index.ts
src/lib/: currentImage.test.ts  currentImage.ts  downloadCancel.test.ts  downloadCancel.ts  epLabel.test.ts  epLabel.ts  errorCopy.test.ts  errorCopy.ts  keyboardShortcuts.test.ts  keyboardShortcuts.ts  licenseUrls.test.ts  licenseUrls.ts  models.generated.ts  models.test.ts  models.ts  ncLicense.test.ts  ncLicense.ts  openExternalUrl.test.ts  openExternalUrl.ts  openImage.ts  overwrite.test.ts  overwrite.ts  parseAppError.test.ts  parseAppError.ts  path.test.ts  path.ts  showAppErrorNotice.test.ts  showAppErrorNotice.ts  tauri.ts  theme.test.ts  theme.ts  updater.test.ts  updater.ts  useAnimatedPresence.ts  useKeyboardShortcuts.ts  useModelDownload.ts  useTauriFileDrop.ts  windowControls.ts
src/main/: index.ts
src/main/utils/: handlers.ts
src/preload/: index.d.ts
src/renderer/src/: App.tsx
src/renderer/src/assets/: main.css
src/stores/: batchStore.test.ts  batchStore.ts  imageStore.test.ts  imageStore.ts  progressStore.test.ts  progressStore.ts  settingsStore.ts  uiStore.ts
src/utils/: getDefaultPath.ts
