[package]
name = "yabr"
version = "0.1.0"
description = "Yet Another Background Remover"
authors = ["you"]
edition = "2021"
rust-version = "1.88"
default-run = "yabr"

[lib]
name = "yabr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "gen_model_registry"
path = "src/bin/gen_model_registry.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp", "bmp"] }
imageproc = { version = "0.27.0", default-features = false }
ndarray = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
sha2 = "0.10"
hex = "0.4"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["fs", "io-util", "time", "rt", "macros", "sync"] }
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
ort = { version = "2.0.0-rc.12", features = ["directml", "download-binaries"] }
wgpu = "24"

[target.'cfg(not(windows))'.dependencies]
ort = { version = "2.0.0-rc.12", features = ["cuda", "download-binaries"] }

